--- a/sourse/pug/blocks/sBlogPreview/_sBlogPreview.scss
+++ b/sourse/pug/blocks/sBlogPreview/_sBlogPreview.scss
@@ -19,6 +19,9 @@
 		@include media-breakpoint-down(sm) {
 			--bs-gutter-y: 20px;
 		}
+		@include media-breakpoint-up(xl) {
+			
+		}
 	}
 
 	@include media-breakpoint-up(xl) {}
@@ -37,6 +40,7 @@
 	flex-direction: column;
 	height: 100%;
 	background-color: $white;
+	@include mt;
 	// @include media-breakpoint-down(sm) {
 	// 	margin-bottom: rem(20);
 	// }
@@ -44,15 +48,15 @@
 		box-shadow: 0 0 1rem rgb(68 68 68 / 50%);
 	}
 	&__img-wrap {
-		@include block(210,168)
+		// height: 50%;
+		@include block(210,168);
 	}
 	img {
 		position: absolute;
 		top: 0;
 		left: 0;
 		width: 100%;
-		max-width: 100%;
-		max-height: 100%;
+		height: 100%;
 	}
 	&__caption {
 		padding: $grid-gutter-width;
@@ -72,6 +76,19 @@
 		border-top: 1px solid #dddddd;
 	}
 	&--lg {
+		.blog-item__img-wrap {
+			position: absolute;
+			top: 0;
+			left: 0;
+			right: 0;
+			bottom: 0;
+			width: 100%;
+			height: 100%;
+			@include media-breakpoint-down(xl) {
+				@include block(210,168);
+				height: auto;
+			}
+		}
 		@include media-breakpoint-up(xl) {
 			padding: rem(30);
 			height: 405px;
@@ -94,23 +111,15 @@
 				// 	text-decoration: none;
 				// }
 			}
-			img {
-				position: absolute;
-				top: 0;
-				left: 0;
-				right: 0;
-				bottom: 0;
-				width: 100%;
-				height: 100%;
-				object-fit: cover;
-				object-position: bottom right;
-			}
 			.blog-item__caption {
 				text-decoration: none;
 				font-size: rem(40);
 				font-weight: 700;
 				color: $white;
 				z-index: 1;
+				@include media-breakpoint-only(xl) {
+					font-size: rem(32);
+				}
 				&:hover {
 					text-decoration: none;
 				}
@@ -122,6 +131,5 @@
 				z-index: 1;
 			}
 		}
-
-		}
+	}
 }
